extension/base/browser/options/options.css
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
    sans-serif;
  font-size: 14px;
}
h2 {
  color: #000;
  text-align: center;
  font-size: 2em;
}
h3 {
  color: #000;
  padding: 0px 0px;
}
h4 {
  color: #000;
  padding: 0px 0px;
  margin: 10px 0px;
}
/* the area below the title that includes the row of tabs and the panels controlled by them */
.tabbedArea {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.tab {
  cursor: pointer;
  padding: 10px 20px;
  margin: 0px 2px;
  background: #e1f0b4;
  display: inline-block;
  color: #002414;
  border: none;
  border-radius: 3px 3px 0px 0px;
}
.panels {
  background: #fffffff6;
  min-height: 200px;
  width: 100%;
  border-radius: 3px;
  overflow: hidden;
  padding: 10px;
  border: 3px solid rgb(255, 226, 112);
  box-sizing: border-box;
}
.panel {
  display: none;
  animation: fadein 0.8s;
}
@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.tab.active {
  background: #ffe270;
  color: rgb(0, 0, 0);
  font-weight: bold;
}
/* Subsections */

.subsectionSelector {
  padding: 5px 20px;
  margin: 0px 0px;
  background: #ffe270;
  display: inline-block;
  color: #002414;
  border: none;
  border-radius: 3px 3px 0px 0px;
  font-weight: bold;
}
.subsectionsContainer {
  background: #fffffff6;
  min-height: 200px;
  width: 100%;
  border-radius: 0px 3px 3px 3px;
  overflow: hidden;
  padding: 0px 10px 10px 10px;
  border: 3px solid rgb(255, 226, 112);
  box-sizing: border-box;
  margin: 0px 0px;
}
.subsectionPanel {
  animation: fadein 0.8s;
  margin: 0px 0px;
  padding: 10px 10px;
}

/* Option elements */
.optionCheckbox {
  margin: 4px 0px;
}
.optionSelect {
  margin: 2px 2px;
}
.optionNumber {
  margin: 2px 0px;
  width: 40px;
}
.optionText {
  margin: 2px 0px;
  width: 300px;
}

.tabComment {
  font-style: italic;
  padding-left: 0px;
  display: inline-block;
}
.subsectionComment {
  font-style: italic;
  padding-left: 0px;
  display: inline-block;
}
.optionComment {
  font-style: italic;
  padding-left: 20px;
  display: inline-block;
}

/* save button */
.saveButton {
  background-color: #25422d;
  border-radius: 10px;
  display: inline-block;
  cursor: pointer;
  color: #f5f6f5;
  font-size: 20px;
  padding: 16px 31px;
  text-decoration: none;
  text-shadow: 0px 1px 0px #2f6627;
}
.saveButton:hover {
  background-color: #8fc642;
}
.saveButton:active {
  position: relative;
  top: 1px;
}

.topbar {
  min-height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 24px;
}

.bar {
  display: block;
  width: 25px;
  height: 3px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: black;
}

.hamburgerButtonContainer {
  display: block;
  width: 25px;
  padding: 0;
}

.hamburgerButton {
  padding: 0;
  display: block;
  background-color: white;
  border: 0px;
  cursor: pointer;
}

/* The Close Button in the dialog */
.close {
  color: #aaa;
  font-size: 28px;
  font-weight: bold;
  position: absolute;
  top: 0px;
  right: 6px;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

ul.dialogMenuItemList {
  list-style-type: none; /* Remove bullets */
  margin: 0;
  padding: 0;
}
ul.dialogMenuItemList li {
  padding: 0px;
  margin: 0px;
}

ul.buttonTextList {
  list-style-type: none; /* Remove bullets */
  margin: 0;
  padding: 0;
}
ul.buttonTextList li.title {
  padding: 0px;
  margin: 0px;
  font-weight: bold;
}
ul.buttonTextList li.comment {
  padding-top: 5px;
  margin: 0px;
}

/* popup menu button */
.popupMenuButton {
  text-align: left;
  background-color: #cfcfcf;
  border-radius: 0px;
  border-width: 0px;
  border-top: 1px solid #bbb;
  display: inline-block;
  cursor: pointer;
  color: black;
  background-color: white;
  font-size: 14px;
  padding: 10px 10px;
  width: 100%;
}
.popupMenuButton:hover {
  background-color: #e1f0b4;
}
.popupMenuButton:active {
  background-color: #c1d084;
}

dialog {
  border: 1px solid black;
  width: 700px;
  max-width: 100%;
  padding: 0px;
}

.dialogHeader {
  padding: 10px;
  background: #ffe270;
  font-weight: bold;
}

/*
  This is how to change the dimming color for the background when the dialog is up:
dialog::backdrop {
  background-color: #c1d094af;
}
*/

/*
  Draggable List
  */

.optionSiteListDraggable {
  list-style-type: none;
  padding: 0;
  margin: 0px;

  border: 1px solid black;
  max-width: 400px;
}

li.draggableListItem {
  background-color: #f0f0f0;
  padding: 3px;
  margin: 3px;
  cursor: grab;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

li.draggableListItem > label {
  cursor: grab;
}

.beingDragged {
  color: #a0a0a0;
}

.draggableIconBar {
  display: block;
  width: 20px;
  height: 2px;
  margin: 3px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: black;
}

.draggableIconContainer {
  display: block;
  width: 25px;
  padding: 0;
}

.draggableIcon {
  padding: 0;
  display: block;
  background-color: #f0f0f0;
  border: 0px;
  cursor: grab;
}

.draggableListItemComment {
  font-style: italic;
  font-size: 10px;
}

